[gd_scene load_steps=4 format=3 uid="uid://b8fg4kgsmjydd"]

[ext_resource type="Script" uid="uid://bo4ljibrgtvnh" path="res://select_level.gd" id="1_ffrrg"]
[ext_resource type="PackedScene" uid="uid://bepqx6r6xnb6c" path="res://bg.tscn" id="1_ke1em"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffrrg"]
bg_color = Color(0, 0, 0, 0.470588)

[node name="select_level" type="Node2D"]
script = ExtResource("1_ffrrg")

[node name="BG" parent="." instance=ExtResource("1_ke1em")]

[node name="Info" type="Label" parent="."]
offset_left = 448.0
offset_top = 192.0
offset_right = 824.0
offset_bottom = 256.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_ffrrg")
text = "Выберете уровень"

[node name="level1" type="Button" parent="."]
offset_left = 448.0
offset_top = 320.0
offset_right = 576.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 40
text = "1"

[node name="level2" type="Button" parent="."]
offset_left = 704.0
offset_top = 320.0
offset_right = 832.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 40
text = "2"

[connection signal="pressed" from="level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level_2_pressed"]
